--- a/contact.html
+++ b/contact.html
@@ -8,6 +8,8 @@
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <!-- Animate CSS -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -38,8 +40,9 @@
                 <a class="navbar-brand" href="./index.html" itemscope itemtype="https://schema.org/Organization"><img
                         itemprop="logo" src="./images/logo.png" alt="Patrick's logo" class="logo"></a>
 
-                <button class="navbar-toggler border-0 bg-secondary p-3" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-                    aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <button class="navbar-toggler border-0 bg-secondary p-3" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false"
+                    aria-label="Toggle navigation">
                     <span class="navbar-icon">MENU</span>
                 </button>
 
@@ -112,7 +115,8 @@
                         </div>
                         <div class="d-flex justify-content-center">
                             <button type="button" class="btn btn-outline-primary rounded-5 border-3 py-1 px-5 my-2"
-                                data-bs-toggle="modal" data-bs-target="#staticBackdrop" aria-label="send the message to me">send</button>
+                                data-bs-toggle="modal" data-bs-target="#staticBackdrop"
+                                aria-label="send the message to me">send</button>
                         </div>
                     </form>
                 </div>
