--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
   <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+  <!-- Animate CSS -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
   <!-- Google Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -39,8 +41,8 @@
         <a class="navbar-brand" href="./index.html" itemscope itemtype="https://schema.org/Organization"><img
             itemprop="logo" src="./images/logo.png" alt="Patrick's logo" class="logo"></a>
 
-        <button class="navbar-toggler border-0 bg-secondary p-3" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-          aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <button class="navbar-toggler border-0 bg-secondary p-3" type="button" data-bs-toggle="collapse"
+          data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-icon">MENU</span>
         </button>
 
@@ -72,15 +74,17 @@
         <div class="p-sm-5 pink-pad bg-opacity-75 rounded-4 text-center text-lg-start">
           <div class="p-sm-5">
             <div class="pink-pad-1 p-sm-0 p-5">
-            <h1 role="heading">PATRICK MINH NGOC LE</h1>
-            <p class="my-5 h3" role="heading">designer | developer</p>
-          </div>
+              <h1 role="heading">PATRICK MINH NGOC LE</h1>
+              <p class="my-5 h3" role="heading">designer | developer</p>
+            </div>
             <div class="pink-pad-2">
-            <p class="my-5 h5" role="heading">Showcasing innovative design and development expertise, bridging digital branding with
-              creativity in the
-              modern era.</p>
-            <a class="btn btn-outline-primary rounded-5 border-3 my-2 py-1" href="./about.html" role="button" aria-label="go to about me page">know
-              more</a>
+              <p class="my-5 h5" role="heading">Showcasing innovative design and development expertise, bridging digital
+                branding with
+                creativity in the
+                modern era.</p>
+              <a class="btn btn-outline-primary rounded-5 border-3 my-2 py-1" href="./about.html" role="button"
+                aria-label="go to about me page">know
+                more</a>
             </div>
           </div>
         </div>
@@ -108,7 +112,8 @@
             </div>
           </div>
         </div>
-        <a class="btn btn-outline-primary rounded-5 border-3 my-5 py-1" href="./works.html" role="button" aria-label="go to works page">know more</a>
+        <a class="btn btn-outline-primary rounded-5 border-3 my-5 py-1" href="./works.html" role="button"
+          aria-label="go to works page">know more</a>
       </div>
 
     </section>
@@ -126,8 +131,9 @@
                 every project.
               </p>
               <div class="pink-pad-2 p-sm-0 py-5">
-              <a class="btn btn-outline-primary rounded-5 border-3 my-3 py-1" href="./contact.html" role="button" aria-label="go to contact page">contact
-                me</a>
+                <a class="btn btn-outline-primary rounded-5 border-3 my-3 py-1" href="./contact.html" role="button"
+                  aria-label="go to contact page">contact
+                  me</a>
               </div>
             </div>
           </div>
