--- a/works.html
+++ b/works.html
@@ -8,6 +8,8 @@
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <!-- Animate CSS -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -105,7 +107,8 @@
                         embrace, aiming to evoke emotion and preserve memories for a lifetime.</p>
                     <div class="p-5 text-center text-lg-end">
                         <a class="btn btn-outline-primary rounded-5 border-3 py-1 d-inline-block"
-                            href="https://www.instagram.com/patrikngocfoto/" target="_blank" role="button" aria-label="go to my instagram to see other photos i took">my insta</a>
+                            href="https://www.instagram.com/patrikngocfoto/" target="_blank" role="button"
+                            aria-label="go to my instagram to see other photos i took">my insta</a>
                     </div>
                 </section>
 
@@ -145,7 +148,8 @@
                         web offerings, setting your brand apart with compelling narratives and captivating visuals.</p>
                     <div class="p-5 text-center text-lg-end">
                         <a class="btn btn-outline-primary rounded-5 border-3 py-1 d-inline-block"
-                            href="https://vimeo.com/915279673?share=copy" target="_blank" role="button" aria-label="watch my showreel">showreels</a>
+                            href="https://vimeo.com/915279673?share=copy" target="_blank" role="button"
+                            aria-label="watch my showreel">showreels</a>
                     </div>
                 </section>
 
@@ -167,31 +171,34 @@
                             </picture>
                             <div class="p-5 pb-0 text-center">
                                 <a class="btn btn-outline-primary rounded-5 border-3 py-1 d-inline-block"
-                                    href="https://le000259.github.io/mtm6201-midterm/" target="_blank" role="button" aria-label="go to see my coded website">visit
+                                    href="https://le000259.github.io/mtm6201-midterm/" target="_blank" role="button"
+                                    aria-label="go to see my coded website">visit
                                     site</a>
                             </div>
                         </div>
                         <div class="col-12 col-lg-6">
                             <!-- second web pic -->
-                        <picture>
-                            <source srcset="./images/works-pic/web-2-684p.png,
+                            <picture>
+                                <source srcset="./images/works-pic/web-2-684p.png,
 ./images/works-pic/web-2-1368p.png 2x,
 ./images/works-pic/web-2-2052p.png 3x" media="(min-width:577px)">
-                            <source srcset="./images/works-pic/web-2-270p.png,
+                                <source srcset="./images/works-pic/web-2-270p.png,
 ./images/works-pic/web-2-540p.png 2x,
 ./images/works-pic/web-2-810p.png 3x" media="(max-width:576px)">
-                            <img class="rounded-4 w-100" src="./images/works-pic/web-2-540p.png" alt="web example">
-                        </picture>
-                        <div class="p-5 pb-0 text-center">
-                            <a class="btn btn-outline-primary rounded-5 border-3 py-1 d-inline-block"
-                                href="https://le000259.github.io/final-project/index.html" target="_blank" role="button" aria-label="go to see my coded website">visit
-                                site</a>
+                                <img class="rounded-4 w-100" src="./images/works-pic/web-2-540p.png" alt="web example">
+                            </picture>
+                            <div class="p-5 pb-0 text-center">
+                                <a class="btn btn-outline-primary rounded-5 border-3 py-1 d-inline-block"
+                                    href="https://le000259.github.io/final-project/index.html" target="_blank"
+                                    role="button" aria-label="go to see my coded website">visit
+                                    site</a>
+                            </div>
                         </div>
-                    </div>
                     </div>
                     <p class="p-5 h5">In the realm of web development and design, I merge technical proficiency
                         with a storytelling flair to create bespoke websites that artfully communicate the essence of
-                        each client's narrative, ensuring a memorable and impactful online presence. These examples above are purely made with HTML and CSS as part of class works.</p>
+                        each client's narrative, ensuring a memorable and impactful online presence. These examples
+                        above are purely made with HTML and CSS as part of class works.</p>
 
                 </section>
 
